--- a/BlogPostDemo/BlogPostDemo.Api/appsettings.json
+++ b/BlogPostDemo/BlogPostDemo.Api/appsettings.json
@@ -8,6 +8,8 @@
     "EnableIIS": "false"
   },
   "ApiKeys": {
-    "System": "Ksdfad"
+    "System": "757f7896-8968-4a5d-a62c-00cf1ce03766",
+    "Client1": "e3ce1916-e7a1-4468-96ed-5e9e4c95d7d0",
+    "Client2": "14391cf4-bd73-4d0f-826d-79bfc39b6f5a"
   }
 }
